// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HorizontalBarChartWithAxis snapShot testing Should render gradients on bars 1`] = `
<div
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_1"
>
  <div
    id="defaultTabbableElement_2"
  />
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          position: relative;
        }
    data-focuszone-id="FocusZone4"
    data-tabster="{\\"uncontrolled\\": {}}"
  >
    <svg
      aria-label="Horizontal bar chart with 4 bars. The X axis displays values. The Y axis displays values. "
      focusable="false"
      height="0"
      role="region"
      style="display: block;"
      width="0"
    >
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_1"
        transform="translate(0, -35)"
      />
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
        id="yAxisGElementchart_1"
        transform="translate(40, 0)"
      />
      <g />
    </svg>
  </div>
  <div
    class=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      class=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style="position: relative;"
        >
          <div
            data-automation-id="visibleContent"
            style="position: fixed; visibility: hidden;"
          >
            <div
              aria-label="Legends"
              aria-multiselectable="false"
              class=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone5"
              data-tabster="{\\"uncontrolled\\": {}}"
              role="listbox"
            >
              <div
                class=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: nowrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Oranges"
                    aria-posinset="1"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class=

                          {
                            background-color: #4760D5;
                            border-color: #4760D5;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #4760D5, #4760D5);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Oranges
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Dogs"
                    aria-posinset="2"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #795AA6;
                            border-color: #795AA6;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #795AA6, #795AA6);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Dogs
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Apples"
                    aria-posinset="3"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #159195;
                            border-color: #159195;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #159195, #159195);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Apples
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Bananas"
                    aria-posinset="4"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #B146C2;
                            border-color: #B146C2;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #B146C2, #B146C2);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Bananas
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HorizontalBarChartWithAxis snapShot testing Should render rounded corners on bars 1`] = `
<div
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_1"
>
  <div
    id="defaultTabbableElement_2"
  />
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          position: relative;
        }
    data-focuszone-id="FocusZone4"
    data-tabster="{\\"uncontrolled\\": {}}"
  >
    <svg
      aria-label="Horizontal bar chart with 4 bars. The X axis displays values. The Y axis displays values. "
      focusable="false"
      height="0"
      role="region"
      style="display: block;"
      width="0"
    >
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_1"
        transform="translate(0, -35)"
      />
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
        id="yAxisGElementchart_1"
        transform="translate(40, 0)"
      />
      <g />
    </svg>
  </div>
  <div
    class=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      class=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style="position: relative;"
        >
          <div
            data-automation-id="visibleContent"
            style="position: fixed; visibility: hidden;"
          >
            <div
              aria-label="Legends"
              aria-multiselectable="false"
              class=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone5"
              data-tabster="{\\"uncontrolled\\": {}}"
              role="listbox"
            >
              <div
                class=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: nowrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Oranges"
                    aria-posinset="1"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class=

                          {
                            background-color: #0078d4;
                            border-color: #0078d4;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #0078d4, #0078d4);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Oranges
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Dogs"
                    aria-posinset="2"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #002050;
                            border-color: #002050;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #002050, #002050);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Dogs
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Apples"
                    aria-posinset="3"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #00188f;
                            border-color: #00188f;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #00188f, #00188f);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Apples
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Bananas"
                    aria-posinset="4"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #00bcf2;
                            border-color: #00bcf2;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #00bcf2, #00bcf2);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Bananas
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HorizontalBarChartWithAxis snapShot testing renders HorizontalBarChartWithAxis correctly 1`] = `
<div
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_1"
>
  <div
    id="defaultTabbableElement_2"
  />
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          position: relative;
        }
    data-focuszone-id="FocusZone4"
    data-tabster="{\\"uncontrolled\\": {}}"
  >
    <svg
      aria-label="Horizontal bar chart with 4 bars. The X axis displays values. The Y axis displays values. "
      focusable="false"
      height="0"
      role="region"
      style="display: block;"
      width="0"
    >
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_1"
        transform="translate(0, -35)"
      />
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
        id="yAxisGElementchart_1"
        transform="translate(40, 0)"
      />
      <g />
    </svg>
  </div>
  <div
    class=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      class=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style="position: relative;"
        >
          <div
            data-automation-id="visibleContent"
            style="position: fixed; visibility: hidden;"
          >
            <div
              aria-label="Legends"
              aria-multiselectable="false"
              class=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone5"
              data-tabster="{\\"uncontrolled\\": {}}"
              role="listbox"
            >
              <div
                class=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: nowrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Oranges"
                    aria-posinset="1"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class=

                          {
                            background-color: #0078d4;
                            border-color: #0078d4;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #0078d4, #0078d4);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Oranges
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Dogs"
                    aria-posinset="2"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #002050;
                            border-color: #002050;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #002050, #002050);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Dogs
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Apples"
                    aria-posinset="3"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #00188f;
                            border-color: #00188f;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #00188f, #00188f);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Apples
                    </div>
                  </button>
                </div>
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="Bananas"
                    aria-posinset="4"
                    aria-selected="false"
                    aria-setsize="4"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="-1"
                  >
                    <div
                      class=

                          {
                            background-color: #00bcf2;
                            border-color: #00bcf2;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #00bcf2, #00bcf2);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      Bananas
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HorizontalBarChartWithAxis snapShot testing renders hideLegend correctly 1`] = `
<div
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_1"
>
  <div
    id="defaultTabbableElement_2"
  />
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          position: relative;
        }
    data-focuszone-id="FocusZone4"
    data-tabster="{\\"uncontrolled\\": {}}"
  >
    <svg
      aria-label="Horizontal bar chart with 4 bars. The X axis displays values. The Y axis displays values. "
      focusable="false"
      height="0"
      role="region"
      style="display: block;"
      width="0"
    >
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_1"
        transform="translate(0, -35)"
      />
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
        id="yAxisGElementchart_1"
        transform="translate(40, 0)"
      />
      <g />
    </svg>
  </div>
</div>
`;

exports[`HorizontalBarChartWithAxis snapShot testing renders showToolTipForYAxisLabels correctly 1`] = `
<div
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_1"
>
  <div
    id="defaultTabbableElement_2"
  />
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          position: relative;
        }
    data-focuszone-id="FocusZone4"
    data-tabster="{\\"uncontrolled\\": {}}"
  >
    <svg
      aria-label="Horizontal bar chart with 4 bars. The X axis displays values. The Y axis displays categories. "
      focusable="false"
      height="0"
      role="region"
      style="display: block;"
      width="0"
    >
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
            & path {
              display: none;
            }
        id="xAxisGElementchart_1"
        transform="translate(0, -35)"
      />
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
        id="yAxisGElementchart_1"
        transform="translate(40, 0)"
      />
      <g />
    </svg>
  </div>
  <div
    class=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      class=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style="position: relative;"
        >
          <div
            data-automation-id="visibleContent"
            style="position: fixed; visibility: hidden;"
          >
            <div
              aria-label="Legends"
              aria-multiselectable="false"
              class=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone5"
              data-tabster="{\\"uncontrolled\\": {}}"
              role="listbox"
            >
              <div
                class=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: nowrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="undefined"
                    aria-posinset="1"
                    aria-selected="false"
                    aria-setsize="1"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class=

                          {
                            background-color: #0078d4;
                            border-color: #0078d4;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #0078d4, #0078d4);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      undefined
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HorizontalBarChartWithAxis snapShot testing renders showYAxisLables correctly 1`] = `
<div
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: flex;
        flex-direction: column;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: 100%;
        overflow: hidden;
        width: 100%;
      }
  id="chart_1"
>
  <div
    id="defaultTabbableElement_2"
  />
  <div
    class=
        ms-FocusZone
        &:focus {
          outline: none;
        }
        {
          position: relative;
        }
    data-focuszone-id="FocusZone4"
    data-tabster="{\\"uncontrolled\\": {}}"
  >
    <svg
      aria-label="Horizontal bar chart with 4 bars. The X axis displays values. The Y axis displays categories. "
      focusable="false"
      height="0"
      role="region"
      style="display: block;"
      width="0"
    >
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
              width: 1px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
            & path {
              display: none;
            }
        fill="none"
        font-family="sans-serif"
        font-size="10"
        id="xAxisGElementchart_1"
        text-anchor="middle"
        transform="translate(0, -35)"
      >
        <path
          class="domain"
          d="M40.5,6V0.5H-19.5V6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(40.5,0)"
        >
          <line
            stroke="currentColor"
            y2="20"
          />
          <text
            aria-hidden="true"
            dy="0.71em"
            fill="currentColor"
            y="30"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(28.5,0)"
        >
          <line
            stroke="currentColor"
            y2="20"
          />
          <text
            aria-hidden="true"
            dy="0.71em"
            fill="currentColor"
            y="30"
          >
            1000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(16.5,0)"
        >
          <line
            stroke="currentColor"
            y2="20"
          />
          <text
            aria-hidden="true"
            dy="0.71em"
            fill="currentColor"
            y="30"
          >
            2000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(4.5,0)"
        >
          <line
            stroke="currentColor"
            y2="20"
          />
          <text
            aria-hidden="true"
            dy="0.71em"
            fill="currentColor"
            y="30"
          >
            3000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-7.500000000000002,0)"
        >
          <line
            stroke="currentColor"
            y2="20"
          />
          <text
            aria-hidden="true"
            dy="0.71em"
            fill="currentColor"
            y="30"
          >
            4000
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(-19.5,0)"
        >
          <line
            stroke="currentColor"
            y2="20"
          />
          <text
            aria-hidden="true"
            dy="0.71em"
            fill="currentColor"
            y="30"
          >
            5000
          </text>
        </g>
      </g>
      <g
        class=

            & text {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 10px;
              font-weight: 600;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
              fill: CanvasText;
            }
            & path {
              display: none;
            }
            & line {
              opacity: 0.2;
              stroke: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
              opacity: 0.1;
              stroke: CanvasText;
            }
        fill="none"
        font-family="sans-serif"
        font-size="10"
        id="yAxisGElementchart_1"
        text-anchor="end"
        transform="translate(40, 0)"
      >
        <path
          class="domain"
          d="M-6,-42.5H0.5V28.5H-6"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-31.16666666666667)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-16"
          >
            String Four
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,-15.388888888888891)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-16"
          >
            String Three
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,0.3888888888888875)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-16"
          >
            String Two
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,16.166666666666664)"
        >
          <line
            stroke="currentColor"
            x2="-6"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-16"
          >
            String One
          </text>
        </g>
      </g>
      <g />
    </svg>
  </div>
  <div
    class=

        {
          margin-left: 20px;
          margin-top: 8px;
        }
  >
    <div
      class=

          {
            align-items: center;
            margin-bottom: 0;
            margin-left: -8px;
            margin-right: 0;
            margin-top: -8px;
            white-space: nowrap;
            width: 100%;
          }
    >
      <div>
        <div
          style="position: relative;"
        >
          <div
            data-automation-id="visibleContent"
            style="position: fixed; visibility: hidden;"
          >
            <div
              aria-label="Legends"
              aria-multiselectable="false"
              class=
                  ms-FocusZone
                  &:focus {
                    outline: none;
                  }
              data-focuszone-id="FocusZone5"
              data-tabster="{\\"uncontrolled\\": {}}"
              role="listbox"
            >
              <div
                class=
                    ms-OverflowSet
                    {
                      display: flex;
                      flex-wrap: nowrap;
                      justify-content: unset;
                      position: relative;
                    }
                role="group"
              >
                <div
                  class=
                      ms-OverflowSet-item
                      {
                        display: inherit;
                        flex-shrink: 0;
                      }
                  role="none"
                >
                  <button
                    aria-label="undefined"
                    aria-posinset="1"
                    aria-selected="false"
                    aria-setsize="1"
                    class=

                        {
                          align-items: center;
                          background: none;
                          border: none;
                          cursor: pointer;
                          display: flex;
                          outline: transparent;
                          padding-bottom: 8px;
                          padding-left: 8px;
                          padding-right: 8px;
                          padding-top: 8px;
                          position: relative;
                          text-transform: capitalize;
                        }
                        &::-moz-focus-inner {
                          border: 0;
                        }
                        .ms-Fabric--isFocusVisible &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                          outline-color: #605e5c;
                        }
                        :host(.ms-Fabric--isFocusVisible) &:focus:after {
                          border: 1px solid transparent;
                          bottom: 1px;
                          content: "";
                          left: 1px;
                          outline: 1px solid #605e5c;
                          position: absolute;
                          right: 1px;
                          top: 1px;
                          z-index: 1;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                          outline-color: #605e5c;
                        }
                    data-is-focusable="true"
                    role="option"
                    tabindex="0"
                  >
                    <div
                      class=

                          {
                            background-color: #0078d4;
                            border-color: #0078d4;
                            border: 1px solid;
                            content: ;
                            height: 12px;
                            margin-right: 8px;
                            width: 12px;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                            content: linear-gradient(to right, #0078d4, #0078d4);
                            opacity: ;
                          }
                    />
                    <div
                      class=

                          {
                            -moz-osx-font-smoothing: grayscale;
                            -webkit-font-smoothing: antialiased;
                            color: #323130;
                            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                            font-size: 12px;
                            font-weight: 400;
                            line-height: 16px;
                            opacity: ;
                          }
                    >
                      undefined
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
